<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="@dimen/verticalMargin"
    android:layout_marginRight="@dimen/verticalMargin">
    <android.support.v7.widget.CardView
        android:id="@+id/cv_item_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:cardMaxElevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/allMargin">
            <TextView
                android:id="@+id/tv_item_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/date"
                android:textSize="12sp"
                android:layout_marginBottom="@dimen/verticalMargin"/>
            <TextView
                android:id="@+id/tv_item_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/vehicle"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/verticalMargin"/>
            <TextView
                android:id="@+id/tv_item_bbnkb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/bbnkb"
                android:textSize="14sp"
                android:layout_marginBottom="@dimen/verticalMargin"/>
            <TextView
                android:id="@+id/tv_item_pkb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/pkb"
                android:textSize="14sp"
                android:layout_marginBottom="@dimen/verticalMargin"/>
            <TextView
                android:id="@+id/tv_item_swdkllaj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/swdkllaj"
                android:textSize="14sp"
                android:layout_marginBottom="@dimen/verticalMargin"/>
            <TextView
                android:id="@+id/tv_item_admstnk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/biaya_administrasi_stnk"
                android:textSize="14sp"
                android:layout_marginBottom="@dimen/verticalMargin"/>
            <TextView
                android:id="@+id/tv_item_admtnkb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/biaya_administrasi_tnkb"
                android:textSize="14sp"
                android:layout_marginBottom="@dimen/verticalMargin"/>
            <TextView
                android:id="@+id/tv_item_jumlah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/jumlah"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_item_notif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/pesan_pengingat"
                android:textSize="14sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_item_datepick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yyyy_mm_dd"
                    android:textStyle="italic"
                    android:layout_marginRight="14dp"
                    android:layout_marginTop="12dp"/>
                <TextView
                    android:id="@+id/tv_item_timepick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hh_mm"
                    android:textStyle="italic"
                    android:layout_marginTop="12dp"/>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>