<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/allMargin"
    android:orientation="vertical"
    tools:context="com.belajar.rafi.pajaku.FormAddUpdateActivity">
    <LinearLayout
        android:id="@+id/activity_form_add_update"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/verticalMargin">
        <EditText
            android:id="@+id/edt_vehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/nama_kendaraan"
            android:inputType="textCapSentences"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/verticalMargin">
        <EditText
            android:id="@+id/edt_bbnkb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/bbn_kb"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/verticalMargin">
        <EditText
            android:id="@+id/edt_pkb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/pkb"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/verticalMargin">
        <EditText
            android:id="@+id/edt_swdkllaj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/swdkllaj"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/verticalMargin">
        <EditText
            android:id="@+id/edt_admSTNK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/biaya_administrasi_stnk"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/verticalMargin">
        <EditText
            android:id="@+id/edt_admTNKB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="Biaya Administrasi TNKB"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/verticalMargin">
        <EditText
            android:id="@+id/edt_jumlah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/jumlah"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/verticalMargin">
        <Button
            android:id="@+id/click_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tanggal"
            style="@style/Widget.AppCompat.Button.Colored" />
        <Button
            android:id="@+id/click_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jam"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/click_date"/>
    </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/verticalMargin">
            <TextView
                android:id="@+id/tv_note_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tanggal"
                android:textStyle="italic"
                android:textSize="13sp"
                android:layout_weight="1"
                android:layout_marginRight="8dp"/>
            <TextView
                android:id="@+id/tv_note_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Jam"
                android:textStyle="italic"
                android:textSize="13sp"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/verticalMargin">
            <EditText
                android:id="@+id/edt_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/pesan_pengingat"
                android:inputType="textCapSentences"/>
        </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="submit"
        style="@style/Widget.AppCompat.Button.Colored"/>
    </LinearLayout>
</ScrollView>
